# art-g4tk

./: CMakeLists.txt
artg4tk/: CMakeLists.txt
artg4tk/DataProducts/G4DetectorHits/: ArtG4tkVtx.hh
artg4tk/G4PhysModelParamStudy/fcl/: proton3.824GeV-C-QGSP_FTFP_BERT-add-preco-levdens1.fcl  test-ftfp-params-process-level.fcl
artg4tk/lists/: ArParticleHPCapture.cc  ArParticleHPCapture.hh  ArParticleHPCaptureFS.cc  ArParticleHPCaptureFS.hh  CMakeLists.txt  G4EmStandardPhysics_pseudoLaser.cc  G4EmStandardPhysics_pseudoLaser.hh  MyG4BiasedBertiniNeutronBuilder.cc  MyG4BiasedBertiniNeutronBuilder.hh  MyG4HadronPhysicsQGSP_BERT_ArHP.cc  MyG4HadronPhysicsQGSP_BERT_ArHP.hh  MyG4HadronPhysicsQGSP_BERT_HP_NeutronXSBias.cc  MyG4HadronPhysicsQGSP_BERT_HP_NeutronXSBias.hh  MyG4MuIonisationNoDelta.cc  MyG4MuIonisationNoDelta.hh  MyG4NeutronPHPBuilder.cc  MyG4NeutronPHPBuilder.hh  MyQGSP_BERT_ArHP.cc  MyQGSP_BERT_ArHP.hh  MyQGSP_BERT_HP_NeutronXSBias.hh  MyQGSP_BERT_HP_NeutronXSBias.icc  MyQGSP_BERT_LASER.cc  MyQGSP_BERT_LASER.hh
artg4tk/particles/: CMakeLists.txt  G4PseudoLaser.cc  G4PseudoLaser.hh
artg4tk/pluginActions/general/: ExampleGeneralAction.cc
artg4tk/pluginActions/physicsList/: PhysicsList.cc  PhysicsList_service.hh
artg4tk/pluginDetectors/gdml/: CMakeLists.txt  GDMLDetector.cc  GDMLDetector_service.cc
artg4tk/services/: DetectorHolder_service.hh  Dummy_service.hh
artg4tk/util/: CMakeLists.txt
test/: CMakeLists.txt
test/eic_calo/: CMakeLists.txt  testeic_calo.fcl  teststandard_physicslist.fcl
ups/: product_deps  setup_for_development
